--- a/plugins/jms-service-amazon-sqs/pom.xml
+++ b/plugins/jms-service-amazon-sqs/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>com.thinkbiganalytics.kylo</groupId>
             <artifactId>kylo-jms-service-api</artifactId>
-            <version>${project.version}</version>
+            <version>0.9.3</version>
         </dependency>
 
         <!-- Spring aritifacts -->
