--- a/services/jms-service/jms-service-api/pom.xml
+++ b/services/jms-service/jms-service-api/pom.xml
@@ -11,6 +11,7 @@
     </parent>
 
     <artifactId>kylo-jms-service-api</artifactId>
+    <version>0.9.3</version>
 
     <properties>
         <plugin.license.parentRelative>../../../</plugin.license.parentRelative>
